--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <h2>Оқу материалдары</h2>
                 <p>7-11 сыныптарға арналған физика пәнінен толық оқу материалдары</p>
                 <a href="topics.html" class="icon-link">Көру
+                </a>
+                <h2>Онлайн тест</h2>
+                <p>Күрделі тақырыптарды жеңіл түсіндіретін бейне сабақтар</p>
+                <a href="./test.html" class="icon-link">Қарау
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </div>
